Fix footer text spacing

--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@ a:visited {
 footer {
   display: grid;
   grid-template-rows: 1fr 1fr;
+  color: grey;
 }
 footer .bottom-navigation {
   display: flex;
@@ -269,6 +270,10 @@ footer ul {
 footer .bottom-navigation ul {
   text-align: left;
 }
+footer .bottom-navigation ul li {
+  line-height: 1.3em;
+  padding: 5px;
+}
 footer .bottom-navigation ul li:nth-child(1) {
   font-weight: bold;
 }
@@ -278,6 +283,10 @@ footer section .wrapper {
 }
 footer .wrapper .row {
   display: flex;
+}
+footer .wrapper .row:nth-child(2) li{
+  line-height: 1.3em;
+  padding: 5px;
 }
 footer .wrapper .flag {
   place-self: center;
@@ -296,7 +305,7 @@ footer .wrapper .flag .select-css {
   appearance: none;
   display: block;
   font-size: 16px;
-  line-height: 1.3;
+  line-height: 1.3em;
   width: 90%;
   float: right;
   background-image: url("assets/images/selector-arrow.png");
